Update index.html with updated webhook

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="card">
       <h3>Option 1: Direct POST (opens a new tab)</h3>
       <form
-        action="https://YOUR_WEBHOOK_URL_HERE"
+        action="https://hook.relay.app/api/v1/playbook/cmfzccw7l22ov0qmbasdb3qwg/trigger/A06lYKXO7P8iP9y6FHxcgAE"
         method="post"
         target="_blank"
       >
@@ -60,7 +60,7 @@
 
     <div class="card" style="margin-top:16px">
       <h3>Current Endpoint</h3>
-      <p>Replace <code>https://hook.relay.app/api/v1/playbook/cmfzccw7l22ov0qmbasdb3qwg/trigger/A06lYKXO7P8iP9y6FHxcgA</code> with your real endpoint (e.g., from webhook.site).</p>
+      <p> <code>https://hook.relay.app/api/v1/playbook/cmfzccw7l22ov0qmbasdb3qwg/trigger/A06lYKXO7P8iP9y6FHxcgA</code></p>
     </div>
   </div>
 
